--- a/DataBase_FinalProjects/Master/AdminPage.Master
+++ b/DataBase_FinalProjects/Master/AdminPage.Master
@@ -6,6 +6,7 @@
 <head runat="server">
     <title></title>
     <link href="../Assets/style/style.css" rel="stylesheet" />
+    <link href="../Assets/img/logo.jpg" rel="icon" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -14,7 +15,7 @@
     <form id="form1" runat="server">
         <div class="container">
             <div class="nav-bar">
-                <div class="left-middle-content">Chỗ này để logo nè</div>
+                <a style="font-family: 'Courgette', cursive; background-color: #A12;" class="middle-content" href="/View/Home.aspx">SQUEE</a>
                 <a href="../View/Home.aspx" class="left-middle-content"><i class="fas fa-home"></i>&nbsp Home</a>
                 <a class="left-middle-content" href="../View/ProductManagement.aspx"><i class="fas fa-tshirt"></i>&nbsp Product Management</a>
                 <a class="left-middle-content" href="../View/StaffManagement.aspx"><i class="fas fa-female"></i>&nbsp Staff Management</a>
